Finished meetup pos